[package]
name = "audiocafe-tokyo-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "audiocafe-tokyo-server"
path = "src/main.rs"

[dependencies]
poem = "3.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tracing = "0.1"
tracing-subscriber = "0.3"
rust-json = { path = "../RFrontEnd/RJSON" }
regex = "1"
once_cell = "1"
html-escape = "0.2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
